# linux-idp

./: log.txt  make_executable.sh
cmake/check_env/: CMakeLists.txt
cmake/hello_external_library/: CMakeLists.txt
cmake/hello_library/: CMakeLists.txt  hello.cpp
cmake/hello_package/: CMakeLists.txt
cmake/hello_subproject/: CMakeLists.txt
cmake/hello_subproject/hello/: CMakeLists.txt
cmake/hello_world/: CMakeLists.txt
cmake/target_include_directories/libhello/: CMakeLists.txt  main.cpp
cmake/target_include_directories/libhello/include/: hello.h
git/: README.md  file.h  main.cpp
linux_shell/: make_executable.sh  rm_svn.sh  show_users.sh
qemu/: launch.sh
